# Cloud9_Scout_edge

./: .gitignore  DECISIONS.md  DEMO.md  DEVPOST.md  LICENSE  README.md  RUNBOOK.md  SPEC.md  package-lock.json  package.json
apps/api/: main.py  pyproject.toml
apps/api/services/: demo.py
apps/web/: package-lock.json  package.json
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/api/data-source/check/: route.ts
apps/web/app/api/grid/central/: route.ts
apps/web/app/api/grid/file-download/: route.ts
apps/web/app/api/grid/series-state/: route.ts
apps/web/app/directory/: page.tsx
apps/web/app/generate/: page.tsx
apps/web/app/help/: page.tsx
apps/web/app/reports/: page.tsx
apps/web/app/series/[id]/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/teams/: page.tsx
apps/web/app/timeline/[seriesId]/: page.tsx
apps/web/app/trends/: page.tsx
apps/web/components/: app-shell.tsx  command-palette.tsx  data-source-provider.tsx  evidence-drawer.tsx  game-assets.tsx  game-icons.tsx  game-theme.tsx  glossary-tooltip.tsx  keyboard-shortcuts.tsx  loading-states.tsx  sidebar.tsx  toast-provider.tsx  topbar.tsx
apps/web/components/ui/: card.tsx  data-table.tsx  primitives.tsx  skeleton.tsx
apps/web/lib/data-provider/: demo-provider.ts  grid-provider.ts  index.ts  types.ts
data/fixtures/: demo-team.json
